--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>BoxWarmup</title>
+        <link rel="stylesheet" href="/css/style.css" />
+    </head>
+    <body>
+        <header>these are the beatles</header>
+        <img id="beatles" src="https://images.radiox.co.uk/images/67203?crop=16_9&width=660&relax=1&signature=55LkrqcNZrAY4toJIVC2ULMZ_AU=" alt="The Beatles band walking across Abbey Road" />
+        <div id="paul">Paul</div>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <div id="ringo">Ringo</div>
+        <div>This is trying to be in the center</div>
+        <div id="george">George</div>
+        <div id="john">John</div>
+    </body>
+</html>
